--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ matplotlib==3.7.0
 streamlit==1.22.0
 seaborn==0.12.2
 shap==0.41.0
-sklearn==1.2.1
+scikit-learn==1.2.1
 joblib==1.1.1
 xgboost==1.7.5
